--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     </header>
 <h1>Heading <i class="fa-solid fa-heart"></i></h1>
-    <p>Paragraph</p>
+    <p class="sub-heading-color">Paragraph</p>
 
     <!--JavaScript Script from Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
