--- a/game-library.html
+++ b/game-library.html
@@ -54,9 +54,9 @@
     </nav>
 
     <!-- Header with carousel -->
-    <header class="container">
+    <header id="header" class="container section">
         <div class="row">
-            <div class="col-12 col-xl-6">Game library intro text section</div>
+            <div class="col-12 col-xl-6 text-center text-xl-start">Game library intro text section</div>
             <div class="col-12 col-xl-6">Carousel</div>
         </div>
     </header>
