--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- Header with carousel -->
-    <header id="header" class="containe section">
+    <header id="header" class="container section">
         <div class="row">
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
@@ -116,25 +116,153 @@
         <!-- Services section -->
         <section class="container">
             <div class="row">
-                <div class="col-12">Services section heading</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <section id="services" class="container section">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <h2 class="display-6">Services</h2>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-3">
+                            <div class="card">
+                                <img src="assets/images/services-1.webp" class="card-img-top"
+                                    alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table">
+                                <div class="card-body">
+                                    <h3 class="card-title sub-heading-color">Play in our cafe</h3>
+                                    <p class="card-text">
+                                        Enjoy a relaxing atmosphere while diving into exciting board
+                                        games with friends. Indulge in our cosy café offerings, from
+                                        aromatic coffees to savory snacks.
+                                    </p>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="mb-0">€7 per person</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-3">
+                            <div class="card">
+                                <img src="assets/images/services-2.webp" class="card-img-top"
+                                    alt="Board games stacked in bookshelves, a man can be seen browsing the shelves" />
+                                <div class="card-body">
+                                    <!-- bootstrap cards come as h5 by default, changed to h3 to fit project heading hierarchy -->
+                                    <h3 class="card-title sub-heading-color">Game library</h3>
+                                    <p class="card-text">
+                                        Explore our collection of board games, ranging from classic
+                                        favorites to the latest releases. Find the perfect game for
+                                        any age, skill level, or interest.
+                                    </p>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="mb-0">See prices in store</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-3">
+                            <div class="card">
+                                <img src="assets/images/services-3.webp" class="card-img-top">
+                                <div class="card-body">
+                                    <h3 class="card-title sub-heading-color">Events</h3>
+                                    <p class="card-text">
+                                        Join us for special game nights, tournaments, and themed
+                                        events. A great opportunity to meet new people and test your
+                                        gaming skills.
+                                    </p>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="mb-0">From €5 per person</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-3">
+                            <div class="card">
+                                <img src="assets/images/services-4.webp" class="card-img-top"
+                                    alt="A kids party being held at Boardwalk Games">
+                                <div class="card-body">
+                                    <h3 class="card-title sub-heading-color">Kids parties</h3>
+                                    <p class="card-text">
+                                        Celebrate your child's special day with us! We offer fun,
+                                        game-filled party packages that are sure to delight young
+                                        gamers and their friends.
+                                    </p>
+                                </div>
+                                <div class="card-footer">
+                                    <p class="mb-0">From €7 per child</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
     </main>
 
     <!-- Footer / contact section -->
     <!-- mt-auto added to push footer to the bottom of the page -->
-    <footer class="mt-auto">
-        <div class="container">
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12">Contact section heading</div>
+                <div class="col-12 text-center">
+                    <h2 class="display6">Contact Us !</h2>
+                </div>
                 <!-- Contact info -->
-                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info </h3>
+                    <address>
+                        <strong><i class="fa-solid fa-location-dot"></i> Boardwalk Games</strong><br>
+                        123 Boardwalk <br>
+                        Boardwalk City, 12345
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 0123456789 <br>
+                        <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co</p>
+
+                    <div class="social-links my-4">
+
+                        <a href="https://www.instagram.com/" target="_blank"
+                            aria-lebel="Visit our instagram Page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-instagram"></i></a>
+
+                        <a href="https://www.facebook.com/" target="_blank"
+                            aria-lebel="Visit our facebook Page (opens in a new tab)" rel="noopener">
+                            <i class="fa-brands fa-square-facebook"></i></a>
+
+                        <a href="https://x.com/?lang=en" target="_blank"
+                            aria-lebel="Visit our x feed (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-x-twitter"></i></a>
+                    </div>
+                </div>
                 <!-- Opening times -->
-                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Opening times</h3>
+                    <table class="table table-dark">
+                        <thead>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Mon</th>
+                                <td colspan="2">Closed</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Tue - Thur</th>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Fri - Sat</th>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sun</th>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </footer>
