--- a/game-library.html
+++ b/game-library.html
@@ -41,12 +41,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Services</a>
                     </li>
+
+                    <li class="nav-item" >
+                        <a class="nav-link" href="index.html#events">Events</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html#contact">Contact</a>
                     </li>
+
+                   
 
                     <li class="nav-item"></li>
                     <a href="booking.html"  class="btn btn-primary ms-lg-3">Book now</a>
