--- a/index.html
+++ b/index.html
@@ -43,14 +43,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Services</a>
                     </li>
+
+                    <li class="nav-item" >
+                        <a class="nav-link" href="index.html#events">Events</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
+
+                    
+
                     <li class="nav-item"></li>
-                    <a href="booking.html"  class="btn custom-button-filled ms-lg-3">Book now</a>
+                    <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +75,7 @@
                     café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
-                    <a href="booking.html" aria-current="page" class="btn custom-button-outline mb-4">Book now</a>
+                <a href="booking.html" aria-current="page" class="btn custom-button-outline mb-4">Book now</a>
             </div>
             <div class="col-12 col-xl-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -196,6 +203,62 @@
                     </div>
                 </section>
             </div>
+        </section>
+
+        <section id="events" class="container section  ">
+            <h2 class="text-center">Join our events</h2>
+            <div id="event-paragraph">
+                <p>Whether you're delving into dungeons, reliving classic games, or competing in high-stakes
+                    tournaments,
+                    there's something for every gamer. Reservations are recommended to ensure your spot at the table.
+                    Student discounts are available, so bring your student ID and enjoy more gaming for less.</p>
+                <p>Outside scheduled events, our shop remains open for regular play. Join us anytime to discover new
+                    games
+                    and meet fellow enthusiasts.</p>
+            </div>
+
+            <div class="table-responsive{-sm|-md|-lg|-xl|-xxl} text-xl-start table">
+                <table class="table table-hover table-bordered ">
+                    <thead class="text-center">
+                        <tr>
+                            <th scope="col">Event</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Time</th>
+                            <th scope="col">Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Dungeons & Dragons</th>
+                            <td>Tuesdays</td>
+                            <td>8pm - 11pm</td>
+                            <td>€25 for 6 sessions</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Retro Game Night</th>
+                            <td>Thursdays</td>
+                            <td>8pm - 11pm </td>
+                            <td>€5 per person*</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Tournaments</th>
+                            <td>Last Sunday of the month</td>
+                            <td>12pm - 7pm</td>
+                            <td>€10 per person</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div id="student-discount" class="text-center">
+                    <button type="button" class="btn custom-button-filled text-center sharp-corners"> *Get 20% off with valid student
+                        ID</button>
+                </div>
+            </div>
+            
+
+            <div class="text-center ">
+                <a href="booking.html" aria-current="page" class="btn custom-button-outline mt-4 ">Book now</a>
+            </div>
+
         </section>
     </main>
 
