--- a/success.html
+++ b/success.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,8 +43,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#services">Services</a>
                     </li>
-                    <li class="nav-item" >
-                        <a class="nav-link" href="index.html#events">Events</a>
+                    <li class="nav-item">
+                        <a href="index.html#events" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
@@ -139,11 +138,11 @@
                     </table>
                 </div>
             </div>
-
+        </div>
     </footer>
 
     <!-- font awesome 6 -->
-    <script src="https://kit.fontawesome.com/bb7fa06e70.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
     <!-- bootstrap 5 js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
